@@ -81,8 +81,10 @@ void Hero::PushingState::update() {
     // stop pushing if the player changes his direction
     else if (get_commands().get_wanted_direction8() != pushing_direction4 * 2) {
 
-      if (get_commands().is_command_pressed(GameCommand::ACTION)) {
-        hero.set_state(new GrabbingState(hero));
+      if (get_commands().is_command_pressed(GameCommand::ACTION) &&
+          hero.can_grab()
+      ) {
+        hero.start_grabbing();
       }
       else {
         hero.set_state(new FreeState(hero));
@@ -241,17 +243,19 @@ void Hero::PushingState::stop_moving_pushed_entity() {
     return;
   }
 
-  if (!get_commands().is_command_pressed(GameCommand::ACTION)) {
+  if (get_commands().is_command_pressed(GameCommand::ACTION) &&
+      hero.can_grab()
+  ) {
+    // The hero was pushing an entity and grabbing it.
+    hero.start_grabbing();
+  }
+  else {
     // The hero was pushing an entity without grabbing it.
 
     // Stop the animation pushing if his direction changed.
     if (get_commands().get_wanted_direction8() != pushing_direction4 * 2) {
       hero.set_state(new FreeState(hero));
     }
-  }
-  else {
-    // The hero was pushing an entity and grabbing it.
-    hero.set_state(new GrabbingState(hero));
   }
 }
 
